add appointment controller